<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">TITLE</string>
    <string name="crime_details_label">DETAILS</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Pick Date Of Crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$s crime</item>
        <item quantity="other">%1$s crimes</item>
    </plurals>
    <string name="remove_crime">Delete Crime</string>
    <string name="choose_suspect">CHOOSE SUSPECT</string>
    <string name="crime_report_text">SEND CRIME REPORT</string>
    <string name="crime_report">%1$s
    The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send Crime Report Via</string>

</resources>
